* fixed overflow issue

--- a/app/view/style/file-manager.less
+++ b/app/view/style/file-manager.less
@@ -33,6 +33,8 @@
 			margin: .5em;
 
 			.thumbnail {
+				overflow: hidden;
+
 				img {
 					max-width: 100%;
 					max-height: 100%;
